--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/react-dom": "^17.0.14",
+    "antd": "^4.21.7",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-animated-css": "^1.2.1",
