--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/react-dom": "^17.0.14",
     "antd": "^4.21.7",
+    "axios": "^0.27.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-animated-css": "^1.2.1",
